# etl

./: .gitignore  AGENTS.md  MEMORY.md  README.md  pyproject.toml  python-qt-etl-loader.md  seed-cem.zsh  seed_cemetery_agent.py
.kilo/plans/: architectural-implementation-plan.md  continuation-roadmap.md
app/: __init__.py  main.py
app/config/: settings.py
app/core/: __init__.py  db_connection.py  db_introspection.py  file_loader.py  job_store.py  loader.py  mapping.py  models.py  transforms.py  validation.py
app/ui/: __init__.py  column_mapping_page.py  db_connection_page.py  file_select_page.py  load_page.py  main_window.py  table_mapping_page.py  validation_page.py
app/workers/: __init__.py  load_worker.py  validation_worker.py
packaging/installers/: README.md
packaging/pyinstaller/: etl-loader.spec
scripts/: seed_cem.ps1  seed_command.txt
tests/: test_job_store.py  test_loader.py  test_mapping.py  test_transforms.py  test_validation.py
